[tool.poetry]
name = "nbdev1"
version = "0.1.0"
description = ""
authors = ["Shawn Cicoria <github@cicoria.com>"]
packages = [
  { include="pkg1" from="." }
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "jupyterlab"
jupyterlab = "^0.4.1"
nbdev = "^0.2.15"
tensorflow = "^2.1.0"
scikit-learn = "^0.22.2"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
dephell = "^0.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
